# Cross_Paste

./: README.md  peers.json  pyproject.toml
.sisyphus/drafts/: image-support-upgrade.md
.sisyphus/plans/: image-support-upgrade.md
crosspaste/: __init__.py  app.py  clipboard.py  content.py  discovery.py  state.py
crosspaste.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/mac/: start_agent.sh
scripts/windows/: start_agent.bat  start_agent.ps1  start_client.bat  start_client.ps1
tests/: conftest.py  test_content.py
